fix padding and gaps + classNames

--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,10 @@ button {
   font-size: 16px;
   font-weight: 600;
 }
+button:hover {
+  cursor: pointer;
+  opacity: 0.7;
+}
 h1 {
   font-size: 34px;
 }
